--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,14 +11,14 @@ menu_settings:
     - #title: 'Projects'
       #url: '/'
     - #title: 'Blog'
-     # url: '/blog/'
+      #url: '/blog/'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
       url: '/contact'
 
 footer_settings:
-  footer_tagline: #Define what to write in the footer
+  footer_tagline: I take pictures of things that other people walk past while looking at their phones.
 
 grid_settings:
   overlay_opacity: 0.8
